# devsamurai

./: .env.dev  .gitignore  README.md  aulas.csv  pyproject.toml  requirements.txt
devsamurai/: main.py
devsamurai/utils/: __init__.py  csv_utils.py  download.py  extract.py  httpx_download.py  niquests_download.py  settings.py
