[project]
name = "devsamurai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gpocas", email = "gpocas01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "parsel>=1.10.0",
    "rich>=13.9.4",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
