[project]
name = "devsamurai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gpocas", email = "gpocas01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx[http2]>=0.28.1",
    "niquests>=3.12.2",
    "parsel>=1.10.0",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "unidecode>=1.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'

[tool.taskipy.tasks]
start = "uv run devsamurai/main.py"
